<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/container">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:src="@drawable/ic_pop_upframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:fontFamily="@font/exo_bold"
        android:text="@string/exit_game"
        android:textColor="@color/white"
        android:textSize="@dimen/sp28"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:fontFamily="@font/exo_regular"
        android:text="@string/are_you_sure_want_quit_the_game"
        android:textAlignment="center"
        android:textColor="@color/white_opacity70"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_activate"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/exo_bold"
        android:textSize="@dimen/sp14"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginHorizontal="@dimen/dp40"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_view_standings"
        android:fontFamily="@font/exo_bold"
        android:text="@string/quit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        android:layout_marginTop="@dimen/dp18"
        android:layout_marginHorizontal="@dimen/dp40"
        app:layout_constraintEnd_toEndOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>